[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"

axum = "0.7"
tokio = { version = "1", features = ["full"]}

# postgres related libraries
tokio-postgres = "0.7.10"
bb8 = "0.8"
bb8-postgres = "0.8"
